--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "appium": "^2.0.0-beta.25"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.8",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/register": "^7.17.7",
     "@wdio/appium-service": "^7.17.3",
     "@wdio/local-runner": "^7.17.4",
     "@wdio/mocha-framework": "^7.17.3",
